--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     margin: 0;
+    width: 100%;
+    height: 100%;
     background: transparent;
     font-family: "Passion One";
   }
@@ -10,17 +12,17 @@ body {
     font-size: 2em;
     padding: 20px;
     overflow: hidden;
-    width: 30%;
+    width: 100%;
   }
 
   #stat-header {
     font-weight: 700;
-    font-size: 26px;
+    font-size: 40px;
   }
 
   #stat-value {
     font-weight: 400;
-    font-size: 22px;
+    font-size: 36px;
   }
   
   #stat-header,
